new_features_cs21b003/y.output
Terminals unused in grammar

    LPAREN
    RPAREN
    LBRACE
    RBRACE


Grammar

    0 $accept: slist $end

    1 slist: stmt ';' slist
    2      | if_control else_add_on slist
    3      | while_loop slist
    4      | switch slist
    5      | do_while ';' slist
    6      | ε

    7 slist1: stmt ';' slist1
    8       | if_control else_add_on slist1
    9       | while_loop slist1
   10       | switch slist1
   11       | do_while ';' slist1

   12 $@1: ε

   13 slist1: CONTINUE $@1 ';' slist1

   14 $@2: ε

   15 slist1: BREAK $@2 ';' slist1
   16       | ε

   17 $@3: ε

   18 switch: SWITCH '(' EXPR ')' $@3 '{' cases '}'

   19 $@4: ε

   20 $@5: ε

   21 cases: CASE EXPR $@4 ':' slist BREAK $@5 ';' cases
   22      | DEFAULT ':' slist
   23      | ε

   24 $@6: ε

   25 do_while: DO $@6 '{' slist '}' WHILE '(' condition ')'

   26 $@7: ε

   27 $@8: ε

   28 while_loop: WHILE $@7 '(' condition ')' $@8 '{' slist1 '}'

   29 $@9: ε

   30 if_control: IF '(' condition ')' $@9 '{' slist1 '}'

   31 $@10: ε

   32 else_add_on: ELSE $@10 '{' slist1 '}'
   33            | ε

   34 condition: sub_condition boolop condition
   35          | sub_condition
   36          | NOT sub_condition
   37          | NOT sub_condition boolop condition
   38          | NOT '(' condition ')' boolop condition
   39          | '(' condition ')' boolop condition
   40          | NOT '(' condition ')'

   41 sub_condition: EXPR1 relop EXPR1
   42              | EXPR1

   43 boolop: BOOLAND
   44       | BOOLOR

   45 relop: RELAND
   46      | RELEQUAL
   47      | RELGREAT
   48      | RELGREATEQUAL
   49      | RELLESS
   50      | RELLESSEQUAL
   51      | RELNOTEQUAL
   52      | REOR
   53      | '='

   54 EXPR1: EXPR1 '+' TERM1
   55      | EXPR1 '-' TERM1
   56      | TERM1

   57 TERM1: TERM1 '*' FACT1
   58      | TERM1 '/' FACT1
   59      | FACT1

   60 FACT1: INC IDTEMP
   61      | IDTEMP INC
   62      | DEC IDTEMP
   63      | IDTEMP2 DEC
   64      | '-' FIX1
   65      | FIX1

   66 FIX1: IDTEMP
   67     | NUMBER
   68     | FLOAT_NUMBER

   69 stmt: IDTEMP '=' EXPR
   70     | EXPR

   71 EXPR: EXPR '+' TERM
   72     | EXPR '-' TERM
   73     | TERM

   74 TERM: TERM '*' FACT
   75     | TERM '/' FACT
   76     | FACT

   77 FACT: INC IDTEMP
   78     | IDTEMP INC
   79     | DEC IDTEMP
   80     | IDTEMP2 DEC
   81     | '-' FIX
   82     | FIX

   83 FIX: '(' EXPR ')'
   84    | IDTEMP
   85    | NUMBER
   86    | FLOAT_NUMBER

   87 IDTEMP: ID

   88 IDTEMP2: ID


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 18 25 28 30 38 39 40 83
    ')' (41) 18 25 28 30 38 39 40 83
    '*' (42) 57 74
    '+' (43) 54 71
    '-' (45) 55 64 72 81
    '/' (47) 58 75
    ':' (58) 21 22
    ';' (59) 1 5 7 11 13 15 21
    '=' (61) 53 69
    '{' (123) 18 25 28 30 32
    '}' (125) 18 25 28 30 32
    error (256)
    NUMBER (258) 67 85
    ID (259) 87 88
    FLOAT_NUMBER (260) 68 86
    INC (261) 60 61 77 78
    DEC (262) 62 63 79 80
    LPAREN (263)
    RPAREN (264)
    RELAND (265) 45
    REOR (266) 52
    NOT (267) 36 37 38 40
    BOOLOR (268) 44
    BOOLAND (269) 43
    RELGREAT (270) 47
    RELLESS (271) 49
    RELGREATEQUAL (272) 48
    RELLESSEQUAL (273) 50
    RELNOTEQUAL (274) 51
    RELEQUAL (275) 46
    ELSE (276) 32
    LBRACE (277)
    RBRACE (278)
    IF <String> (279) 30
    DO <String> (280) 25
    WHILE <String> (281) 25 28
    SWITCH <String> (282) 18
    BREAK <String> (283) 15 21
    CONTINUE <String> (284) 13
    CASE <String> (285) 21
    DEFAULT <String> (286) 22


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    slist <String> (44)
        on left: 1 2 3 4 5 6
        on right: 0 1 2 3 4 5 21 22 25
    slist1 (45)
        on left: 7 8 9 10 11 13 15 16
        on right: 7 8 9 10 11 13 15 28 30 32
    $@1 (46)
        on left: 12
        on right: 13
    $@2 (47)
        on left: 14
        on right: 15
    switch <String> (48)
        on left: 18
        on right: 4 10
    $@3 (49)
        on left: 17
        on right: 18
    cases <String> (50)
        on left: 21 22 23
        on right: 18 21
    $@4 (51)
        on left: 19
        on right: 21
    $@5 (52)
        on left: 20
        on right: 21
    do_while <String> (53)
        on left: 25
        on right: 5 11
    $@6 (54)
        on left: 24
        on right: 25
    while_loop <String> (55)
        on left: 28
        on right: 3 9
    $@7 (56)
        on left: 26
        on right: 28
    $@8 (57)
        on left: 27
        on right: 28
    if_control <String> (58)
        on left: 30
        on right: 2 8
    $@9 (59)
        on left: 29
        on right: 30
    else_add_on <String> (60)
        on left: 32 33
        on right: 2 8
    $@10 (61)
        on left: 31
        on right: 32
    condition <String> (62)
        on left: 34 35 36 37 38 39 40
        on right: 25 28 30 34 37 38 39 40
    sub_condition <String> (63)
        on left: 41 42
        on right: 34 35 36 37
    boolop <String> (64)
        on left: 43 44
        on right: 34 37 38 39
    relop <String> (65)
        on left: 45 46 47 48 49 50 51 52 53
        on right: 41
    EXPR1 <String> (66)
        on left: 54 55 56
        on right: 41 42 54 55
    TERM1 <String> (67)
        on left: 57 58 59
        on right: 54 55 56 57 58
    FACT1 <String> (68)
        on left: 60 61 62 63 64 65
        on right: 57 58 59
    FIX1 <String> (69)
        on left: 66 67 68
        on right: 64 65
    stmt <String> (70)
        on left: 69 70
        on right: 1 7
    EXPR <String> (71)
        on left: 71 72 73
        on right: 18 21 69 70 71 72 83
    TERM <String> (72)
        on left: 74 75 76
        on right: 71 72 73 74 75
    FACT <String> (73)
        on left: 77 78 79 80 81 82
        on right: 74 75 76
    FIX <String> (74)
        on left: 83 84 85 86
        on right: 81 82
    IDTEMP <String> (75)
        on left: 87
        on right: 60 61 62 66 69 77 78 79 84
    IDTEMP2 <String> (76)
        on left: 88
        on right: 63 80


State 0

    0 $accept: • slist $end

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 3
    INC           shift, and go to state 4
    DEC           shift, and go to state 5
    IF            shift, and go to state 6
    DO            shift, and go to state 7
    WHILE         shift, and go to state 8
    SWITCH        shift, and go to state 9
    '('           shift, and go to state 10
    '-'           shift, and go to state 11

    $default  reduce using rule 6 (slist)

    slist       go to state 12
    switch      go to state 13
    do_while    go to state 14
    while_loop  go to state 15
    if_control  go to state 16
    stmt        go to state 17
    EXPR        go to state 18
    TERM        go to state 19
    FACT        go to state 20
    FIX         go to state 21
    IDTEMP      go to state 22
    IDTEMP2     go to state 23


State 1

   85 FIX: NUMBER •

    $default  reduce using rule 85 (FIX)


State 2

   87 IDTEMP: ID •
   88 IDTEMP2: ID •

    DEC       reduce using rule 88 (IDTEMP2)
    $default  reduce using rule 87 (IDTEMP)


State 3

   86 FIX: FLOAT_NUMBER •

    $default  reduce using rule 86 (FIX)


State 4

   77 FACT: INC • IDTEMP

    ID  shift, and go to state 24

    IDTEMP  go to state 25


State 5

   79 FACT: DEC • IDTEMP

    ID  shift, and go to state 24

    IDTEMP  go to state 26


State 6

   30 if_control: IF • '(' condition ')' $@9 '{' slist1 '}'

    '('  shift, and go to state 27


State 7

   25 do_while: DO • $@6 '{' slist '}' WHILE '(' condition ')'

    $default  reduce using rule 24 ($@6)

    $@6  go to state 28


State 8

   28 while_loop: WHILE • $@7 '(' condition ')' $@8 '{' slist1 '}'

    $default  reduce using rule 26 ($@7)

    $@7  go to state 29


State 9

   18 switch: SWITCH • '(' EXPR ')' $@3 '{' cases '}'

    '('  shift, and go to state 30


State 10

   83 FIX: '(' • EXPR ')'

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 3
    INC           shift, and go to state 4
    DEC           shift, and go to state 5
    '('           shift, and go to state 10
    '-'           shift, and go to state 11

    EXPR     go to state 31
    TERM     go to state 19
    FACT     go to state 20
    FIX      go to state 21
    IDTEMP   go to state 32
    IDTEMP2  go to state 23


State 11

   81 FACT: '-' • FIX

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 24
    FLOAT_NUMBER  shift, and go to state 3
    '('           shift, and go to state 10

    FIX     go to state 33
    IDTEMP  go to state 34


State 12

    0 $accept: slist • $end

    $end  shift, and go to state 35


State 13

    4 slist: switch • slist

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 3
    INC           shift, and go to state 4
    DEC           shift, and go to state 5
    IF            shift, and go to state 6
    DO            shift, and go to state 7
    WHILE         shift, and go to state 8
    SWITCH        shift, and go to state 9
    '('           shift, and go to state 10
    '-'           shift, and go to state 11

    $default  reduce using rule 6 (slist)

    slist       go to state 36
    switch      go to state 13
    do_while    go to state 14
    while_loop  go to state 15
    if_control  go to state 16
    stmt        go to state 17
    EXPR        go to state 18
    TERM        go to state 19
    FACT        go to state 20
    FIX         go to state 21
    IDTEMP      go to state 22
    IDTEMP2     go to state 23


State 14

    5 slist: do_while • ';' slist

    ';'  shift, and go to state 37


State 15

    3 slist: while_loop • slist

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 3
    INC           shift, and go to state 4
    DEC           shift, and go to state 5
    IF            shift, and go to state 6
    DO            shift, and go to state 7
    WHILE         shift, and go to state 8
    SWITCH        shift, and go to state 9
    '('           shift, and go to state 10
    '-'           shift, and go to state 11

    $default  reduce using rule 6 (slist)

    slist       go to state 38
    switch      go to state 13
    do_while    go to state 14
    while_loop  go to state 15
    if_control  go to state 16
    stmt        go to state 17
    EXPR        go to state 18
    TERM        go to state 19
    FACT        go to state 20
    FIX         go to state 21
    IDTEMP      go to state 22
    IDTEMP2     go to state 23


State 16

    2 slist: if_control • else_add_on slist

    ELSE  shift, and go to state 39

    $default  reduce using rule 33 (else_add_on)

    else_add_on  go to state 40


State 17

    1 slist: stmt • ';' slist

    ';'  shift, and go to state 41


State 18

   70 stmt: EXPR •
   71 EXPR: EXPR • '+' TERM
   72     | EXPR • '-' TERM

    '+'  shift, and go to state 42
    '-'  shift, and go to state 43

    $default  reduce using rule 70 (stmt)


State 19

   73 EXPR: TERM •
   74 TERM: TERM • '*' FACT
   75     | TERM • '/' FACT

    '*'  shift, and go to state 44
    '/'  shift, and go to state 45

    $default  reduce using rule 73 (EXPR)


State 20

   76 TERM: FACT •

    $default  reduce using rule 76 (TERM)


State 21

   82 FACT: FIX •

    $default  reduce using rule 82 (FACT)


State 22

   69 stmt: IDTEMP • '=' EXPR
   78 FACT: IDTEMP • INC
   84 FIX: IDTEMP •

    INC  shift, and go to state 46
    '='  shift, and go to state 47

    $default  reduce using rule 84 (FIX)


State 23

   80 FACT: IDTEMP2 • DEC

    DEC  shift, and go to state 48


State 24

   87 IDTEMP: ID •

    $default  reduce using rule 87 (IDTEMP)


State 25

   77 FACT: INC IDTEMP •

    $default  reduce using rule 77 (FACT)


State 26

   79 FACT: DEC IDTEMP •

    $default  reduce using rule 79 (FACT)


State 27

   30 if_control: IF '(' • condition ')' $@9 '{' slist1 '}'

    NUMBER        shift, and go to state 49
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 50
    INC           shift, and go to state 51
    DEC           shift, and go to state 52
    NOT           shift, and go to state 53
    '('           shift, and go to state 54
    '-'           shift, and go to state 55

    condition      go to state 56
    sub_condition  go to state 57
    EXPR1          go to state 58
    TERM1          go to state 59
    FACT1          go to state 60
    FIX1           go to state 61
    IDTEMP         go to state 62
    IDTEMP2        go to state 63


State 28

   25 do_while: DO $@6 • '{' slist '}' WHILE '(' condition ')'

    '{'  shift, and go to state 64


State 29

   28 while_loop: WHILE $@7 • '(' condition ')' $@8 '{' slist1 '}'

    '('  shift, and go to state 65


State 30

   18 switch: SWITCH '(' • EXPR ')' $@3 '{' cases '}'

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 3
    INC           shift, and go to state 4
    DEC           shift, and go to state 5
    '('           shift, and go to state 10
    '-'           shift, and go to state 11

    EXPR     go to state 66
    TERM     go to state 19
    FACT     go to state 20
    FIX      go to state 21
    IDTEMP   go to state 32
    IDTEMP2  go to state 23


State 31

   71 EXPR: EXPR • '+' TERM
   72     | EXPR • '-' TERM
   83 FIX: '(' EXPR • ')'

    ')'  shift, and go to state 67
    '+'  shift, and go to state 42
    '-'  shift, and go to state 43


State 32

   78 FACT: IDTEMP • INC
   84 FIX: IDTEMP •

    INC  shift, and go to state 46

    $default  reduce using rule 84 (FIX)


State 33

   81 FACT: '-' FIX •

    $default  reduce using rule 81 (FACT)


State 34

   84 FIX: IDTEMP •

    $default  reduce using rule 84 (FIX)


State 35

    0 $accept: slist $end •

    $default  accept


State 36

    4 slist: switch slist •

    $default  reduce using rule 4 (slist)


State 37

    5 slist: do_while ';' • slist

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 3
    INC           shift, and go to state 4
    DEC           shift, and go to state 5
    IF            shift, and go to state 6
    DO            shift, and go to state 7
    WHILE         shift, and go to state 8
    SWITCH        shift, and go to state 9
    '('           shift, and go to state 10
    '-'           shift, and go to state 11

    $default  reduce using rule 6 (slist)

    slist       go to state 68
    switch      go to state 13
    do_while    go to state 14
    while_loop  go to state 15
    if_control  go to state 16
    stmt        go to state 17
    EXPR        go to state 18
    TERM        go to state 19
    FACT        go to state 20
    FIX         go to state 21
    IDTEMP      go to state 22
    IDTEMP2     go to state 23


State 38

    3 slist: while_loop slist •

    $default  reduce using rule 3 (slist)


State 39

   32 else_add_on: ELSE • $@10 '{' slist1 '}'

    $default  reduce using rule 31 ($@10)

    $@10  go to state 69


State 40

    2 slist: if_control else_add_on • slist

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 3
    INC           shift, and go to state 4
    DEC           shift, and go to state 5
    IF            shift, and go to state 6
    DO            shift, and go to state 7
    WHILE         shift, and go to state 8
    SWITCH        shift, and go to state 9
    '('           shift, and go to state 10
    '-'           shift, and go to state 11

    $default  reduce using rule 6 (slist)

    slist       go to state 70
    switch      go to state 13
    do_while    go to state 14
    while_loop  go to state 15
    if_control  go to state 16
    stmt        go to state 17
    EXPR        go to state 18
    TERM        go to state 19
    FACT        go to state 20
    FIX         go to state 21
    IDTEMP      go to state 22
    IDTEMP2     go to state 23


State 41

    1 slist: stmt ';' • slist

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 3
    INC           shift, and go to state 4
    DEC           shift, and go to state 5
    IF            shift, and go to state 6
    DO            shift, and go to state 7
    WHILE         shift, and go to state 8
    SWITCH        shift, and go to state 9
    '('           shift, and go to state 10
    '-'           shift, and go to state 11

    $default  reduce using rule 6 (slist)

    slist       go to state 71
    switch      go to state 13
    do_while    go to state 14
    while_loop  go to state 15
    if_control  go to state 16
    stmt        go to state 17
    EXPR        go to state 18
    TERM        go to state 19
    FACT        go to state 20
    FIX         go to state 21
    IDTEMP      go to state 22
    IDTEMP2     go to state 23


State 42

   71 EXPR: EXPR '+' • TERM

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 3
    INC           shift, and go to state 4
    DEC           shift, and go to state 5
    '('           shift, and go to state 10
    '-'           shift, and go to state 11

    TERM     go to state 72
    FACT     go to state 20
    FIX      go to state 21
    IDTEMP   go to state 32
    IDTEMP2  go to state 23


State 43

   72 EXPR: EXPR '-' • TERM

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 3
    INC           shift, and go to state 4
    DEC           shift, and go to state 5
    '('           shift, and go to state 10
    '-'           shift, and go to state 11

    TERM     go to state 73
    FACT     go to state 20
    FIX      go to state 21
    IDTEMP   go to state 32
    IDTEMP2  go to state 23


State 44

   74 TERM: TERM '*' • FACT

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 3
    INC           shift, and go to state 4
    DEC           shift, and go to state 5
    '('           shift, and go to state 10
    '-'           shift, and go to state 11

    FACT     go to state 74
    FIX      go to state 21
    IDTEMP   go to state 32
    IDTEMP2  go to state 23


State 45

   75 TERM: TERM '/' • FACT

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 3
    INC           shift, and go to state 4
    DEC           shift, and go to state 5
    '('           shift, and go to state 10
    '-'           shift, and go to state 11

    FACT     go to state 75
    FIX      go to state 21
    IDTEMP   go to state 32
    IDTEMP2  go to state 23


State 46

   78 FACT: IDTEMP INC •

    $default  reduce using rule 78 (FACT)


State 47

   69 stmt: IDTEMP '=' • EXPR

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 3
    INC           shift, and go to state 4
    DEC           shift, and go to state 5
    '('           shift, and go to state 10
    '-'           shift, and go to state 11

    EXPR     go to state 76
    TERM     go to state 19
    FACT     go to state 20
    FIX      go to state 21
    IDTEMP   go to state 32
    IDTEMP2  go to state 23


State 48

   80 FACT: IDTEMP2 DEC •

    $default  reduce using rule 80 (FACT)


State 49

   67 FIX1: NUMBER •

    $default  reduce using rule 67 (FIX1)


State 50

   68 FIX1: FLOAT_NUMBER •

    $default  reduce using rule 68 (FIX1)


State 51

   60 FACT1: INC • IDTEMP

    ID  shift, and go to state 24

    IDTEMP  go to state 77


State 52

   62 FACT1: DEC • IDTEMP

    ID  shift, and go to state 24

    IDTEMP  go to state 78


State 53

   36 condition: NOT • sub_condition
   37          | NOT • sub_condition boolop condition
   38          | NOT • '(' condition ')' boolop condition
   40          | NOT • '(' condition ')'

    NUMBER        shift, and go to state 49
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 50
    INC           shift, and go to state 51
    DEC           shift, and go to state 52
    '('           shift, and go to state 79
    '-'           shift, and go to state 55

    sub_condition  go to state 80
    EXPR1          go to state 58
    TERM1          go to state 59
    FACT1          go to state 60
    FIX1           go to state 61
    IDTEMP         go to state 62
    IDTEMP2        go to state 63


State 54

   39 condition: '(' • condition ')' boolop condition

    NUMBER        shift, and go to state 49
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 50
    INC           shift, and go to state 51
    DEC           shift, and go to state 52
    NOT           shift, and go to state 53
    '('           shift, and go to state 54
    '-'           shift, and go to state 55

    condition      go to state 81
    sub_condition  go to state 57
    EXPR1          go to state 58
    TERM1          go to state 59
    FACT1          go to state 60
    FIX1           go to state 61
    IDTEMP         go to state 62
    IDTEMP2        go to state 63


State 55

   64 FACT1: '-' • FIX1

    NUMBER        shift, and go to state 49
    ID            shift, and go to state 24
    FLOAT_NUMBER  shift, and go to state 50

    FIX1    go to state 82
    IDTEMP  go to state 83


State 56

   30 if_control: IF '(' condition • ')' $@9 '{' slist1 '}'

    ')'  shift, and go to state 84


State 57

   34 condition: sub_condition • boolop condition
   35          | sub_condition •

    BOOLOR   shift, and go to state 85
    BOOLAND  shift, and go to state 86

    $default  reduce using rule 35 (condition)

    boolop  go to state 87


State 58

   41 sub_condition: EXPR1 • relop EXPR1
   42              | EXPR1 •
   54 EXPR1: EXPR1 • '+' TERM1
   55      | EXPR1 • '-' TERM1

    RELAND         shift, and go to state 88
    REOR           shift, and go to state 89
    RELGREAT       shift, and go to state 90
    RELLESS        shift, and go to state 91
    RELGREATEQUAL  shift, and go to state 92
    RELLESSEQUAL   shift, and go to state 93
    RELNOTEQUAL    shift, and go to state 94
    RELEQUAL       shift, and go to state 95
    '='            shift, and go to state 96
    '+'            shift, and go to state 97
    '-'            shift, and go to state 98

    $default  reduce using rule 42 (sub_condition)

    relop  go to state 99


State 59

   56 EXPR1: TERM1 •
   57 TERM1: TERM1 • '*' FACT1
   58      | TERM1 • '/' FACT1

    '*'  shift, and go to state 100
    '/'  shift, and go to state 101

    $default  reduce using rule 56 (EXPR1)


State 60

   59 TERM1: FACT1 •

    $default  reduce using rule 59 (TERM1)


State 61

   65 FACT1: FIX1 •

    $default  reduce using rule 65 (FACT1)


State 62

   61 FACT1: IDTEMP • INC
   66 FIX1: IDTEMP •

    INC  shift, and go to state 102

    $default  reduce using rule 66 (FIX1)


State 63

   63 FACT1: IDTEMP2 • DEC

    DEC  shift, and go to state 103


State 64

   25 do_while: DO $@6 '{' • slist '}' WHILE '(' condition ')'

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 3
    INC           shift, and go to state 4
    DEC           shift, and go to state 5
    IF            shift, and go to state 6
    DO            shift, and go to state 7
    WHILE         shift, and go to state 8
    SWITCH        shift, and go to state 9
    '('           shift, and go to state 10
    '-'           shift, and go to state 11

    $default  reduce using rule 6 (slist)

    slist       go to state 104
    switch      go to state 13
    do_while    go to state 14
    while_loop  go to state 15
    if_control  go to state 16
    stmt        go to state 17
    EXPR        go to state 18
    TERM        go to state 19
    FACT        go to state 20
    FIX         go to state 21
    IDTEMP      go to state 22
    IDTEMP2     go to state 23


State 65

   28 while_loop: WHILE $@7 '(' • condition ')' $@8 '{' slist1 '}'

    NUMBER        shift, and go to state 49
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 50
    INC           shift, and go to state 51
    DEC           shift, and go to state 52
    NOT           shift, and go to state 53
    '('           shift, and go to state 54
    '-'           shift, and go to state 55

    condition      go to state 105
    sub_condition  go to state 57
    EXPR1          go to state 58
    TERM1          go to state 59
    FACT1          go to state 60
    FIX1           go to state 61
    IDTEMP         go to state 62
    IDTEMP2        go to state 63


State 66

   18 switch: SWITCH '(' EXPR • ')' $@3 '{' cases '}'
   71 EXPR: EXPR • '+' TERM
   72     | EXPR • '-' TERM

    ')'  shift, and go to state 106
    '+'  shift, and go to state 42
    '-'  shift, and go to state 43


State 67

   83 FIX: '(' EXPR ')' •

    $default  reduce using rule 83 (FIX)


State 68

    5 slist: do_while ';' slist •

    $default  reduce using rule 5 (slist)


State 69

   32 else_add_on: ELSE $@10 • '{' slist1 '}'

    '{'  shift, and go to state 107


State 70

    2 slist: if_control else_add_on slist •

    $default  reduce using rule 2 (slist)


State 71

    1 slist: stmt ';' slist •

    $default  reduce using rule 1 (slist)


State 72

   71 EXPR: EXPR '+' TERM •
   74 TERM: TERM • '*' FACT
   75     | TERM • '/' FACT

    '*'  shift, and go to state 44
    '/'  shift, and go to state 45

    $default  reduce using rule 71 (EXPR)


State 73

   72 EXPR: EXPR '-' TERM •
   74 TERM: TERM • '*' FACT
   75     | TERM • '/' FACT

    '*'  shift, and go to state 44
    '/'  shift, and go to state 45

    $default  reduce using rule 72 (EXPR)


State 74

   74 TERM: TERM '*' FACT •

    $default  reduce using rule 74 (TERM)


State 75

   75 TERM: TERM '/' FACT •

    $default  reduce using rule 75 (TERM)


State 76

   69 stmt: IDTEMP '=' EXPR •
   71 EXPR: EXPR • '+' TERM
   72     | EXPR • '-' TERM

    '+'  shift, and go to state 42
    '-'  shift, and go to state 43

    $default  reduce using rule 69 (stmt)


State 77

   60 FACT1: INC IDTEMP •

    $default  reduce using rule 60 (FACT1)


State 78

   62 FACT1: DEC IDTEMP •

    $default  reduce using rule 62 (FACT1)


State 79

   38 condition: NOT '(' • condition ')' boolop condition
   40          | NOT '(' • condition ')'

    NUMBER        shift, and go to state 49
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 50
    INC           shift, and go to state 51
    DEC           shift, and go to state 52
    NOT           shift, and go to state 53
    '('           shift, and go to state 54
    '-'           shift, and go to state 55

    condition      go to state 108
    sub_condition  go to state 57
    EXPR1          go to state 58
    TERM1          go to state 59
    FACT1          go to state 60
    FIX1           go to state 61
    IDTEMP         go to state 62
    IDTEMP2        go to state 63


State 80

   36 condition: NOT sub_condition •
   37          | NOT sub_condition • boolop condition

    BOOLOR   shift, and go to state 85
    BOOLAND  shift, and go to state 86

    $default  reduce using rule 36 (condition)

    boolop  go to state 109


State 81

   39 condition: '(' condition • ')' boolop condition

    ')'  shift, and go to state 110


State 82

   64 FACT1: '-' FIX1 •

    $default  reduce using rule 64 (FACT1)


State 83

   66 FIX1: IDTEMP •

    $default  reduce using rule 66 (FIX1)


State 84

   30 if_control: IF '(' condition ')' • $@9 '{' slist1 '}'

    $default  reduce using rule 29 ($@9)

    $@9  go to state 111


State 85

   44 boolop: BOOLOR •

    $default  reduce using rule 44 (boolop)


State 86

   43 boolop: BOOLAND •

    $default  reduce using rule 43 (boolop)


State 87

   34 condition: sub_condition boolop • condition

    NUMBER        shift, and go to state 49
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 50
    INC           shift, and go to state 51
    DEC           shift, and go to state 52
    NOT           shift, and go to state 53
    '('           shift, and go to state 54
    '-'           shift, and go to state 55

    condition      go to state 112
    sub_condition  go to state 57
    EXPR1          go to state 58
    TERM1          go to state 59
    FACT1          go to state 60
    FIX1           go to state 61
    IDTEMP         go to state 62
    IDTEMP2        go to state 63


State 88

   45 relop: RELAND •

    $default  reduce using rule 45 (relop)


State 89

   52 relop: REOR •

    $default  reduce using rule 52 (relop)


State 90

   47 relop: RELGREAT •

    $default  reduce using rule 47 (relop)


State 91

   49 relop: RELLESS •

    $default  reduce using rule 49 (relop)


State 92

   48 relop: RELGREATEQUAL •

    $default  reduce using rule 48 (relop)


State 93

   50 relop: RELLESSEQUAL •

    $default  reduce using rule 50 (relop)


State 94

   51 relop: RELNOTEQUAL •

    $default  reduce using rule 51 (relop)


State 95

   46 relop: RELEQUAL •

    $default  reduce using rule 46 (relop)


State 96

   53 relop: '=' •

    $default  reduce using rule 53 (relop)


State 97

   54 EXPR1: EXPR1 '+' • TERM1

    NUMBER        shift, and go to state 49
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 50
    INC           shift, and go to state 51
    DEC           shift, and go to state 52
    '-'           shift, and go to state 55

    TERM1    go to state 113
    FACT1    go to state 60
    FIX1     go to state 61
    IDTEMP   go to state 62
    IDTEMP2  go to state 63


State 98

   55 EXPR1: EXPR1 '-' • TERM1

    NUMBER        shift, and go to state 49
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 50
    INC           shift, and go to state 51
    DEC           shift, and go to state 52
    '-'           shift, and go to state 55

    TERM1    go to state 114
    FACT1    go to state 60
    FIX1     go to state 61
    IDTEMP   go to state 62
    IDTEMP2  go to state 63


State 99

   41 sub_condition: EXPR1 relop • EXPR1

    NUMBER        shift, and go to state 49
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 50
    INC           shift, and go to state 51
    DEC           shift, and go to state 52
    '-'           shift, and go to state 55

    EXPR1    go to state 115
    TERM1    go to state 59
    FACT1    go to state 60
    FIX1     go to state 61
    IDTEMP   go to state 62
    IDTEMP2  go to state 63


State 100

   57 TERM1: TERM1 '*' • FACT1

    NUMBER        shift, and go to state 49
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 50
    INC           shift, and go to state 51
    DEC           shift, and go to state 52
    '-'           shift, and go to state 55

    FACT1    go to state 116
    FIX1     go to state 61
    IDTEMP   go to state 62
    IDTEMP2  go to state 63


State 101

   58 TERM1: TERM1 '/' • FACT1

    NUMBER        shift, and go to state 49
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 50
    INC           shift, and go to state 51
    DEC           shift, and go to state 52
    '-'           shift, and go to state 55

    FACT1    go to state 117
    FIX1     go to state 61
    IDTEMP   go to state 62
    IDTEMP2  go to state 63


State 102

   61 FACT1: IDTEMP INC •

    $default  reduce using rule 61 (FACT1)


State 103

   63 FACT1: IDTEMP2 DEC •

    $default  reduce using rule 63 (FACT1)


State 104

   25 do_while: DO $@6 '{' slist • '}' WHILE '(' condition ')'

    '}'  shift, and go to state 118


State 105

   28 while_loop: WHILE $@7 '(' condition • ')' $@8 '{' slist1 '}'

    ')'  shift, and go to state 119


State 106

   18 switch: SWITCH '(' EXPR ')' • $@3 '{' cases '}'

    $default  reduce using rule 17 ($@3)

    $@3  go to state 120


State 107

   32 else_add_on: ELSE $@10 '{' • slist1 '}'

    NUMBER        shift, and go to state 1
    ID            shift, and go to state 2
    FLOAT_NUMBER  shift, and go to state 3
    INC           shift, and go to state 4
    DEC           shift, and go to state 5
    IF            shift, and go to state 6
    DO            shift, and go to state 7
    WHILE         shift, and go to state 8
    SWITCH        shift, and go to state 9
    BREAK         shift, and go to state 121
    CONTINUE      shift, and go to state 122
    '('           shift, and go to state 10
    '-'           shift, and go to state 11

    $default  reduce using rule 16 (slist1)

    slist1      go to state 123
    switch      go to state 124
    do_while    go to state 125
    while_loop  go to state 126
    if_control  go to state 127
    stmt        go to state 128
    EXPR        go to state 18
    TERM        go to state 19
    FACT        go to state 20
    FIX         go to state 21
    IDTEMP      go to state 22
    IDTEMP2     go to state 23


State 108

   38 condition: NOT '(' condition • ')' boolop condition
   40          | NOT '(' condition • ')'

    ')'  shift, and go to state 129


State 109

   37 condition: NOT sub_condition boolop • condition
